# cgal-examples

./: .gitmodules  README.md
alpha_bunny/: CMakeLists.txt  README.md  alpha_bunny.cpp  alpha_bunny.webm
basics/: CMakeLists.txt  check-version.cpp  dist2.cpp  predicates.cpp  triangulation.cpp
delaunay_vs_regular_triangulation/: CMakeLists.txt  README.md  dt_vs_rt.webm  main.cpp
dt_bunny/: CMakeLists.txt  README.md  bunny.csv  dt_bunny.cpp  dt_bunny.webm
normal_bunny/: CMakeLists.txt  README.md  bunny.xyz  bunny_with_normals.xyz  normal_bunny.cpp  normal_bunny.webm
offviewer/: CMakeLists.txt  README.md  bunny.off  offview.cpp
poisson_bunny/: CMakeLists.txt  bunny_with_normals.xyz  poisson.cpp  poisson_bunny.cpp
voronoi_delaunay/: CMakeLists.txt  README.md  delaunay_voronoi.webm  main.cpp
